prove sass header, errore variabili in commons

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -9,3 +9,11 @@
   max-width: 1200px;
   margin: 0 auto;
 }
+
+.button {
+  // padding: $st_padding;
+  border: 1px solid black;
+  border-radius: 10px;
+  // background-color: $prova;
+  // color: $prova;
+}
