--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,51 @@
   margin: 0 auto;
 }
 
-.wrapper-header {
+.button {
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.header_wrapper {
+  display: flex;
+}
+
+.header_wrapper .head_right ul {
+  display: flex;
+  justify-content: space-around;
+}
+
+.header_wrapper .head_left,
+.header_wrapper .head_right {
+  width: 50%;
+}
+
+.header_wrapper {
   width: 100%;
-  height: 100px;
+  height: 80px;
   border-bottom: 2px solid black;
   padding: 10px;
 }
 
-.wrapper-header h1 {
+.header_wrapper .head_left img {
+  height: 60px;
+}
+
+.header_wrapper .head_right {
+  height: 100%;
+  line-height: 60px;
+}
+
+.header_wrapper .head_right ul {
+  list-style: none;
+}
+
+.header_wrapper .head_right ul li {
+  display: inline-block;
+}
+
+.header_wrapper .head_right ul li a {
+  text-decoration: none;
   color: red;
 }
 
